force-app/main/default/objects/FieldPermissions__mdt/FieldPermissions__mdt.object-meta.xml
<CustomObject>
    <description>Field Permissions as per security matrix.</description>
    <label>Field Permissions</label>
    <pluralLabel>Field Permissions</pluralLabel>
</CustomObject>