force-app/main/default/objects/FieldPermissions__mdt/fields/FieldElementName__c.field-meta.xml
<CustomField>
    <fullName>FieldElementName__c</fullName>
    <description>field or button or link for which this permission is defined in security matrix. use element Id from field inventory specific to this element, ex. REPS_HOME_18 to be used for &quot;Add an Authorized Representative&quot; button</description>
    <inlineHelpText>field or button or link for which this permission is defined in security matrix. use element Id from field inventory specific to this element, ex. REPS_HOME_18 to be used for &quot;Add an Authorized Representative&quot; button</inlineHelpText>
    <label>Field/Element Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>