force-app/main/default/objects/FieldPermissions__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role mentioned in security matrix</description>
    <inlineHelpText>Role mentioned in security matrix</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Citizen_Individual</fullName>
                
                    <default>true</default>
                
                    <label>Citizen/Individual</label>
                
                </value>
            
                <value>
                
                    <fullName>Agency_Admin</fullName>
                
                
                    <label>Agency Admin</label>
                
                </value>
            
                <value>
                
                    <fullName>Assister</fullName>
                
                
                    <label>Assister</label>
                
                </value>
            
                <value>
                
                    <fullName>CHFS_Prod_Support</fullName>
                
                
                    <label>CHFS Prod Support</label>
                
                </value>
            
                <value>
                
                    <fullName>Contact_Center_View_and_Edit</fullName>
                
                
                    <label>Contact Center (View and Edit)</label>
                
                </value>
            
                <value>
                
                    <fullName>Contact_Center_View_Only</fullName>
                
                
                    <label>Contact Center (View Only)</label>
                
                </value>
            
                <value>
                
                    <fullName>DAIL_Worker</fullName>
                
                
                    <label>DAIL Worker</label>
                
                </value>
            
                <value>
                
                    <fullName>DCBS_View_Only</fullName>
                
                
                    <label>DCBS (View Only)</label>
                
                </value>
            
                <value>
                
                    <fullName>DCBS_Central_Office_View_and_Edit</fullName>
                
                
                    <label>DCBS Central Office (View and Edit)</label>
                
                </value>
            
                <value>
                
                    <fullName>Department_Of_Education_Representative</fullName>
                
                
                    <label>Department Of Education Representative</label>
                
                </value>
            
                <value>
                
                    <fullName>DJJ_Representative</fullName>
                
                
                    <label>DJJ Representative</label>
                
                </value>
            
                <value>
                
                    <fullName>DOC_Representative</fullName>
                
                
                    <label>DOC Representative</label>
                
                </value>
            
                <value>
                
                    <fullName>Eligibility_&amp;_Benefit_Inquiry_User</fullName>
                
                
                    <label>Eligibility &amp; Benefit Inquiry User</label>
                
                </value>
            
                <value>
                
                    <fullName>Individual_Auth_Rep</fullName>
                
                
                    <label>Individual Auth Rep</label>
                
                </value>
            
                <value>
                
                    <fullName>Insurance_Agent</fullName>
                
                
                    <label>Insurance Agent</label>
                
                </value>
            
                <value>
                
                    <fullName>Jailor</fullName>
                
                
                    <label>Jailor</label>
                
                </value>
            
                <value>
                
                    <fullName>Mail_Center_Supervisor</fullName>
                
                
                    <label>Mail Center Supervisor</label>
                
                </value>
            
                <value>
                
                    <fullName>Mail_Center_Worker</fullName>
                
                
                    <label>Mail Center Worker</label>
                
                </value>
            
                <value>
                
                    <fullName>Organization_Auth_Rep</fullName>
                
                
                    <label>Organization Auth Rep</label>
                
                </value>
            
                <value>
                
                    <fullName>Psychiatric_Facility_Representative</fullName>
                
                
                    <label>Psychiatric Facility Representative</label>
                
                </value>
            
                <value>
                
                    <fullName>QE_Hospital</fullName>
                
                
                    <label>QE Hospital</label>
                
                </value>
            
                <value>
                
                    <fullName>QE_Pregnancy</fullName>
                
                
                    <label>QE Pregnancy</label>
                
                </value>
            
                <value>
                
                    <fullName>APPLICATION_INITIATOR</fullName>
                
                
                    <label>APPLICATION INITIATOR</label>
                
                </value>
            
                <value>
                
                    <fullName>APPLICATION_REVIEWER</fullName>
                
                
                    <label>APPLICATION REVIEWER</label>
                
                </value>
            
                <value>
                
                    <fullName>CASE_MANAGEMENT_ADMINISTRATOR_INTERNAL</fullName>
                
                
                    <label>CASE MANAGEMENT ADMINISTRATOR (INTERNAL)</label>
                
                </value>
            
                <value>
                
                    <fullName>WAIVER_CAPACITY_REVIEWER</fullName>
                
                
                    <label>WAIVER CAPACITY REVIEWER</label>
                
                </value>
            
                <value>
                
                    <fullName>CASE_MANAGER</fullName>
                
                
                    <label>CASE MANAGER</label>
                
                </value>
            
                <value>
                
                    <fullName>CASE_SUPERVISOR</fullName>
                
                
                    <label>CASE SUPERVISOR</label>
                
                </value>
            
                <value>
                
                    <fullName>CHFS_APPLICATION_INITIATOR</fullName>
                
                
                    <label>CHFS APPLICATION INITIATOR</label>
                
                </value>
            
                <value>
                
                    <fullName>LEVEL_OF_CARE_ASSESSOR</fullName>
                
                
                    <label>LEVEL OF CARE ASSESSOR</label>
                
                </value>
            
                <value>
                
                    <fullName>LOC_REVIEWER</fullName>
                
                
                    <label>LOC REVIEWER</label>
                
                </value>
            
                <value>
                
                    <fullName>POC_REVIEWER</fullName>
                
                
                    <label>POC REVIEWER</label>
                
                </value>
            
                <value>
                
                    <fullName>SERVICE_NEEDS_ASSESSOR</fullName>
                
                
                    <label>SERVICE NEEDS ASSESSOR</label>
                
                </value>
            
                <value>
                
                    <fullName>INTERNAL_LOC_ASSESSOR</fullName>
                
                
                    <label>INTERNAL LOC ASSESSOR</label>
                
                </value>
            
                <value>
                
                    <fullName>WAIVER_DIRECT_SERVICE_PROVIDER</fullName>
                
                
                    <label>WAIVER DIRECT SERVICE PROVIDER</label>
                
                </value>
            
                <value>
                
                    <fullName>WAIVER_DIRECT_SERVICE PROVIDER_SUPERVISOR</fullName>
                
                
                    <label>WAIVER DIRECT SERVICE PROVIDER SUPERVISOR</label>
                
                </value>
            
                <value>
                
                    <fullName>CAPACITY_MANAGEMENT_ADMINISTRATOR</fullName>
                
                
                    <label>CAPACITY MANAGEMENT ADMINISTRATOR</label>
                
                </value>
            
                <value>
                
                    <fullName>Case_Management_Administrator_Read_Only</fullName>
                
                
                    <label>Case Management Administrator (Read Only)</label>
                
                </value>
            
                <value>
                
                    <fullName>PROD_Support_Read_Only</fullName>
                
                
                    <label>PROD Support (Read Only)</label>
                
                </value>
            
                <value>
                
                    <fullName>CHFS_Internal_Reviewer</fullName>
                
                
                    <label>CHFS Internal Reviewer</label>
                
                </value>
            
                <value>
                
                    <fullName>CASE_MANAGER_IN_TRAINING</fullName>
                
                
                    <label>CASE MANAGER IN TRAINING</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>