force-app/main/default/objects/FieldPermissions__mdt/fields/ScreenName__c.field-meta.xml
<CustomField>
    <fullName>ScreenName__c</fullName>
    <description>Screen name for this field</description>
    <inlineHelpText>Screen name for this field</inlineHelpText>
    <label>Screen Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>